# brain-multimodal-vae

./: .gitignore  pyproject.toml
notebooks/archive/mindeye2_nsd/: archive_train.ipynb  train.ipynb
notebooks/deeprecon/: eval.ipynb  noise_ceiling.ipynb  train.ipynb
notebooks/deeprecon/archive/: conversion_accuracy.ipynb  noise_ceiling.ipynb  temp.py  train_converter_pytorch.ipynb  train_converter_regression.ipynb  train_dmvae.ipynb
notebooks/mnist_svhn/: ckeck_mnist_svhn_dataset.ipynb  reimplement_dmvae.ipynb
notebooks/things_fmri/: train.ipynb
scripts/things/: stim_id.py  stim_idx.py
src/brain_multimodal_vae/: __init__.py  utils.py
src/brain_multimodal_vae/archive/deeprecon/dataset/: align.py  combine.py  dataset.py  load.py
src/brain_multimodal_vae/archive/mindeye2_nsd/datasets/: align.py  dataset.py  load.py  split.py
src/brain_multimodal_vae/dataset/deeprecon/: __init__.py  data.py  dataset.py
src/brain_multimodal_vae/dataset/things_fmri/: __init__.py  data.py
src/brain_multimodal_vae/evaluation/: __init__.py  correlation.py  prediction.py
src/brain_multimodal_vae/models/: __init__.py  base.py  dmvae.py  mmvae.py  mvae.py
src/brain_multimodal_vae/models/archive/: converter.py
src/brain_multimodal_vae/models/distributions/: distributions.py  moe.py  networks.py
src/brain_multimodal_vae/training/: trainer.py
src/fmri_reconstruction_with_dmvae/mnist_svhn/: classifier.py  util.py
